fix:aligned participate button in all scenarios

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -19,7 +19,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     gap: 24px;
     padding: 0 54px;
     padding-top: 25px;
@@ -29,6 +28,7 @@
     text-align: center;
     font-weight: 600;
     font-size: 16px;
+    height: 40px;
     color: rgba(0, 0, 0, 1);
 }
 
